--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "@types/dotenv": "^8.2.0",
     "expo": "~36.0.0",
     "expo-constants": "~8.0.0",
     "react": "~16.9.0",
