--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@types/dotenv": "^8.2.0",
     "expo": "~36.0.0",
     "expo-constants": "~8.0.0",
+    "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-chart-kit": "^4.5.0",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-pure-chart": "^0.0.24",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-svg": "^11.0.1",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-unimodules": "^0.7.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
